# web_crawler

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: crawler.rs  domain.rs  errors.rs  file.rs  lib.rs  main.rs
tmp/: doc.rust-lang.org-2022-04-01+01:00.txt
