[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "crawler"
path = "src/lib.rs"

[[bin]]
name = "crw"
path = "src/main.rs"

[dependencies]
select = "0.4.3"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.6"}
url = "2.2.2"
thiserror = "1.0.30"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9.0"

[dev-dependencies]
httpmock = "0.6.6"
tokio-test = "*"



